fixed layout issues with arrow and spacing in plan page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,4 +43,8 @@ body {
 .container {
   width: 88%;
   margin: auto;
+
+  @include desktopLg {
+    width: 100%;
+  }
 }
